k8s/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8080
  - host: myapp.flight
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flight
            port:
              number: 8070
  - host: myapp.bonus
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bonus
            port:
              number: 8060
  - host: myapp.ticket
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ticket
            port:
              number: 8050
